--- a/app/src/main/res/layout/room_status_fragment.xml
+++ b/app/src/main/res/layout/room_status_fragment.xml
@@ -18,6 +18,18 @@
         app:layout_constraintTop_toTopOf="parent">
 
             <TextView
+                android:id="@+id/roomTitleText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:gravity="start"
+                android:textAllCaps="true"
+                android:textColor="@color/TrafficLightText"
+                android:textIsSelectable="false"
+                android:textSize="40sp"
+                android:textStyle="bold" />
+
+            <TextView
                 android:id="@+id/statusText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
