--- a/app/src/main/res/layout/traffic_lights_activity.xml
+++ b/app/src/main/res/layout/traffic_lights_activity.xml
@@ -11,7 +11,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:padding="10dip"
-        android:background="#0098d0"
+        android:background="@color/FreeRoomBlue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,13 +20,14 @@
 
             <fragment
                 android:id="@+id/list"
-                android:name="com.futurice.android.reservator.view.trafficlightsactivity.TrafficLightsPageFragment"
+                android:name="com.futurice.android.reservator.view.trafficlights.TrafficLightsPageFragment"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+                <!-- android:layout_marginTop="100dp" - Doesnt work -->
 
     </android.support.constraint.ConstraintLayout>
 
