--- a/app/src/main/res/layout-v17/room_reservation_fragment.xml
+++ b/app/src/main/res/layout-v17/room_reservation_fragment.xml
@@ -5,7 +5,7 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
+    android:background="@color/FreeRoomBlue"
         android:layout_gravity="center_horizontal"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
@@ -34,13 +34,13 @@
     <SeekBar
         android:id="@+id/seekBar"
         android:layout_width="542dp"
-        android:layout_height="22dp"
+        android:layout_height="33dp"
         android:layout_alignParentTop="false"
         android:layout_alignParentEnd="true"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="312dp"
+        android:layout_marginBottom="172dp"
         android:max="90"
         android:progress="30"
         android:progressBackgroundTint="@color/seekBarProgressBackgroundColor"
@@ -70,8 +70,8 @@
         android:id="@+id/TextViewBarDuration"
         android:layout_width="108dp"
         android:layout_height="47dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="216dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="576dp"
         android:text="30 min"
         android:textAlignment="center"
         android:textColor="#F8F8F8"
@@ -85,13 +85,13 @@
         android:layout_height="54dp"
         android:layout_alignTop="@+id/nameInput"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="236dp"
+        android:layout_marginBottom="28dp"
         android:layout_toEndOf="@+id/nameInput"
         android:text="Reserve"
         android:textColor="#0098d0"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.044"
+        app:layout_constraintHorizontal_bias="0.032"
         app:layout_constraintStart_toEndOf="@+id/nameInput">
 
         <requestFocus />
@@ -103,8 +103,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="376dp"
-        android:layout_marginBottom="236dp"
+        android:layout_marginStart="440dp"
+        android:layout_marginBottom="36dp"
         android:ems="10"
         android:hint="Name"
         android:inputType="textPersonName"
