Layout works now if widths are given in dp

--- a/app/src/main/res/layout/traffic_lights_page_fragment.xml
+++ b/app/src/main/res/layout/traffic_lights_page_fragment.xml
@@ -17,39 +17,51 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <FrameLayout
+            android:id="@+id/roomStatusContainer"
+            android:layout_width="900dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
+
             <fragment
                 android:id="@+id/roomStatusFragment"
                 android:name="com.futurice.android.reservator.view.trafficlights.RoomStatusFragment"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                 />
+                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                />
+        </FrameLayout>
 
+
+        <FrameLayout
+            android:id="@+id/roomReservationContainer"
+            android:layout_width="900dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/roomStatusContainer"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
 
             <fragment
                 android:id="@+id/roomReservationFragment"
                 android:name="com.futurice.android.reservator.view.trafficlights.RoomReservationFragment"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                app:layout_constraintTop_toBottomOf="@+id/roomStatusFragment"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                android:layout_height="match_parent"
+                android:layout_width="match_parent"
                 />
+        </FrameLayout>
+        <FrameLayout
+            android:id="@+id/dayCalendarContainer"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/roomStatusContainer"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
             <fragment
                 android:id="@+id/dayCalendarFragment"
                 android:name="com.futurice.android.reservator.view.trafficlights.DayCalendarFragment"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="#ff0000"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/roomStatusFragment"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
+                android:layout_height="match_parent"
+                android:layout_width="match_parent"/>
+        </FrameLayout>
     </android.support.constraint.ConstraintLayout>
 
