--- a/app/src/main/res/layout/day_calendar_fragment.xml
+++ b/app/src/main/res/layout/day_calendar_fragment.xml
@@ -7,6 +7,20 @@
         android:background="#ff0000"
         >
 
+    <com.futurice.android.reservator.view.WeekView
+        android:id="@+id/dayCalendar"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <FrameLayout
+            android:id="@+id/dayCalendarFrame"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginEnd="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="0dp" />
+    </com.futurice.android.reservator.view.WeekView>
+
     </android.support.constraint.ConstraintLayout>
 
 
