--- a/app/src/main/res/layout/day_calendar_fragment.xml
+++ b/app/src/main/res/layout/day_calendar_fragment.xml
@@ -4,7 +4,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:background="#ff0000"
+        android:background="#ffffff"
         >
 
     <com.futurice.android.reservator.view.WeekView
