--- a/app/src/main/res/layout-v17/room_reservation_fragment.xml
+++ b/app/src/main/res/layout-v17/room_reservation_fragment.xml
@@ -3,6 +3,7 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center_horizontal"
@@ -66,12 +67,12 @@
 
     <Button
         android:id="@+id/reserveButton"
-        android:layout_width="wrap_content"
-        android:layout_height="54dp"
+        android:layout_width="106dp"
+        android:layout_height="72dp"
         android:layout_alignTop="@+id/nameInput"
         android:layout_marginBottom="32dp"
         android:layout_toEndOf="@+id/nameInput"
-        android:text="Reserve"
+        android:text="@string/button_reserve"
         android:textColor="#F8F8F8"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -82,22 +83,21 @@
 
     <EditText
         android:id="@+id/nameInput"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="400dp"
+        android:layout_height="46dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="40dp"
         android:ems="10"
-        android:hint="Name"
+        android:hint="@string/meeting_description"
         android:inputType="textPersonName"
         android:singleLine="true"
         android:textColor="#979797"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.45"
-        app:layout_constraintStart_toStartOf="parent">
-    </EditText>
+        app:layout_constraintStart_toStartOf="parent"></EditText>
 
 </android.support.constraint.ConstraintLayout>
 
