--- a/app/src/main/res/layout-v17/ongoing_reservation_fragment.xml
+++ b/app/src/main/res/layout-v17/ongoing_reservation_fragment.xml
@@ -46,6 +46,7 @@
         android:progressBackgroundTint="@color/seekBarProgressBackgroundColor"
         android:progressTint="@color/seekBarProgress"
         android:thumbTint="@color/seekBarThumbColor"
+        android:layout_marginTop="20dp"
         app:layout_constraintTop_toBottomOf="@+id/ongoingReservationLeft"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
