--- a/app/src/main/res/layout/bottom_fragment.xml
+++ b/app/src/main/res/layout/bottom_fragment.xml
@@ -9,8 +9,9 @@
         android:id="@+id/clockBarFragment"
         android:background="#555555"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
+     <!--
         <TextView
             android:id="@+id/tapToCalendarText"
             android:textAlignment="center"
@@ -25,7 +26,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" />
-
+    -->
         <include
             android:id="@+id/bottomFragmentClock"
             android:layout_width="match_parent"
