--- a/app/src/main/res/layout/bottom_fragment.xml
+++ b/app/src/main/res/layout/bottom_fragment.xml
@@ -7,8 +7,7 @@
 
     <FrameLayout
         android:id="@+id/clockBarFragment"
-        android:background="#555555"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
      <!--
@@ -29,7 +28,7 @@
     -->
         <include
             android:id="@+id/bottomFragmentClock"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:textColor="@color/TrafficLightText"
             android:layout_marginStart="10dp"
