--- a/app/src/main/res/layout/day_calendar_fragment.xml
+++ b/app/src/main/res/layout/day_calendar_fragment.xml
@@ -4,8 +4,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:background="#ffffff"
-        >
+        android:background="#F8F8F8">
 
     <com.futurice.android.reservator.view.WeekView
         android:id="@+id/dayCalendar"
@@ -17,8 +16,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginEnd="0dp"
-            android:layout_marginRight="0dp"
-            android:layout_marginBottom="0dp" />
+            android:layout_marginBottom="3dp"
+            android:layout_marginTop="3dp"/>
     </com.futurice.android.reservator.view.WeekView>
 
     </android.support.constraint.ConstraintLayout>
