--- a/app/src/main/res/layout-v17/ongoing_reservation_fragment.xml
+++ b/app/src/main/res/layout-v17/ongoing_reservation_fragment.xml
@@ -66,21 +66,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
     </TextView>
-    <!--
-    <Button
-        android:id="@+id/approveChangeButton"
-        android:layout_width="106dp"
-        android:layout_height="72dp"
-        android:layout_marginBottom="32dp"
-        android:layout_toEndOf="@+id/nameInput"
-        android:text="@string/approveChange"
+
+    <TextView
+        android:id="@+id/modifyPrompt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="120dp"
+        android:text="@string/modifyPrompt"
         android:textColor="#F8F8F8"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="20sp"
+        app:layout_constraintTop_toBottomOf="@+id/barDurationText"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.05"
-        app:layout_constraintStart_toEndOf="@+id/nameInput">
-    </Button>
-    -->
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ProgressBar
         android:id="@+id/cangeProgressBar"
