--- a/app/src/main/res/layout/day_calendar_fragment.xml
+++ b/app/src/main/res/layout/day_calendar_fragment.xml
@@ -7,6 +7,7 @@
         android:background="#F8F8F8">
 
     <com.futurice.android.reservator.view.WeekView
+        app:number_of_days_to_show="1"
         android:id="@+id/dayCalendar"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
